--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         background: #000e2c;
         padding: 20px 40px 0px 40px !important;
         max-width: 420px !important;
+        position: relative;
       }
 
       div.col-auto {
@@ -192,6 +193,11 @@
         margin-left: -77px;
         margin-top: -130px;
         float: left;
+        position: absolute;
+        top: 280px;
+        left: 100px;
+        z-index: 11;
+        transform: scale(0.8);
       }
 
       #lvlval {
@@ -204,11 +210,10 @@
       }
 
       #trophyinfo {
-        z-index: -100;
         height: 35px;
-        top: 40%;
-        left: 50%;
-        background-color: #aac5fa;
+        top: 330px;
+        left: 387px;
+        /* background-color: #aac5fa; */
         margin-left: -85px;
         margin-top: -159px;
         float: left;
@@ -220,6 +225,8 @@
         background-position: right;
         background-repeat: no-repeat;
         background-size: contain;
+        z-index: 10;
+        position: absolute;
       }
 
       #trophyval {
@@ -231,6 +238,8 @@
 
       .statval {
         font-size: 1.4rem;
+        width: 35px;
+        display: block;
       }
 
       .valtext {
@@ -240,7 +249,7 @@
       div#displayName {
         text-align: center;
         font-size: 1.35rem;
-        padding: 15px !important;
+        padding: 25px !important;
         /* background-color: rgba(170, 197, 250, 0.75); */
         border-radius: 0 0 30px 30px;
         text-shadow: -2px -2px 0 #000, 0 -2px 0 #000, 3px -2px 0 #000,
@@ -257,6 +266,7 @@
       }
 
       .valtext {
+        font-size: 22px;
         position: absolute;
         top: 0;
         z-index: 1;
@@ -264,7 +274,11 @@
         display: block;
         min-width: 5rem;
         text-align: center !important;
-        width: 350px;
+        width: 313px;
+        margin-left: 42px;
+        text-shadow: -2px -2px 0 #000, 0 -2px 0 #000, 3px -2px 0 #000,
+          3px 0 0 #000, 3px 3px 0 #000, 0 3px 0 #000, -2px 3px 0 #000,
+          -2px 0 0 #000;
       }
     </style>
     <link
@@ -348,12 +362,12 @@
             ></div>
           </div>
         </div>
-      </div>
-      <div id="trophyinfo">
-        <span id="trophyval">1</span>
-      </div>
-      <div id="levelinfo">
-        <span id="lvlval">15</span>
+        <div id="trophyinfo">
+          <span id="trophyval">1</span>
+        </div>
+        <div id="levelinfo">
+          <span id="lvlval">15</span>
+        </div>
       </div>
     </div>
     <div id="displayName" class="container"></div>
